--- a/css/style.css
+++ b/css/style.css
@@ -87,8 +87,8 @@ body {
   border-radius: 4px;
 }
 
-/* Hiragana answers */
-.answers {
+/* Hiragana choices */
+.choices {
   list-style: none;
   text-align: center;
   padding: 0;
@@ -96,7 +96,7 @@ body {
   text-transform: lowercase;
 }
 
-.answers li {
+.button {
   padding: 0;
   margin: 2.2% 0;
   font-size: 2.45em;
@@ -108,31 +108,26 @@ body {
   box-shadow: 0 3px 0 #CCAB37;
   */
   transition: all linear 0.15s;
-}
-
-.answers li:hover {
-  background-color: #C4C4C4;
-  /*
-  background-color: #FFE790;
-  */
-  transition: all linear 0.15s
-}
-
-.answers li:active {
-  transform: translate(0, 3px);
-  box-shadow: none;
-  transition: all linear 0.09s
-}
-
-.answers a {
   text-decoration: none;
   display: block;
   padding: 2.5% 3%;
   color: #fff;
 }
 
-.answers a:hover {
+.button:hover {
+  background-color: #C4C4C4;
+  /*
+  background-color: #FFE790;
+  */
+  transition: all linear 0.15s;
   color: #4F4F4D;
+  cursor: pointer;
+}
+
+.button:active {
+  transform: translate(0, 3px);
+  box-shadow: none;
+  transition: all linear 0.09s
 }
 
 /* Full .main-container width column */
